Improve job pac

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,14 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Publish (Release Mode)
-        run: dotnet publish GhisTrader/src/GhisTrader  -o ${{ github.workspace }}/bin/Publish --configuration Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:PublishReadyToRun=true
+        run: |
+          dir
+          echo  "ref_type ====> ${{github.ref_type }}"
+          echo  " workspace====> ${{ github.workspace }}"
+          echo  "  github.ref ====> ${{  github.ref}}"
+          echo  " event_name ====> ${{ github.event_name}}"
+          cd /src/GhisTrader
+          dotnet publish -v d  -o ${{ github.workspace }}/bin/Publish --configuration Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:PublishReadyToRun=true
 
       - name: Generate changelog
         run: echo "#Good things are comming" > ${{github.workspace}}-CHANGELOG.txt
