--- a/src/GhisTrader/GhisTrader.csproj
+++ b/src/GhisTrader/GhisTrader.csproj
@@ -13,4 +13,13 @@
     <ProjectReference Include="..\GhisTrader.FinancialDomainAPI\GhisTrader.FinancialDomainAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HostBuilders\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
