--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 
 on: [push, pull_request] # Trigger when someone pushs or dens PR
 
-# 3 Jobs, release, deploy, notify
+# 3 Jobs, release
 jobs:
   release:
     runs-on: windows-latest
@@ -44,28 +44,4 @@ jobs:
           name: GhisTrader
           path: ${{ github.workspace }}/bin/Publish
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
-  deploy:
-    if: ${{ github.event_name == 'push' && github.ref_type == 'branch' }}
-    needs: release # Dependent of jobs release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: GhisTrader
-          path: GhisTrader
-
-      - name: Create Zip File(GhisTrader.zip)
-        id: zip_output
-        run: Compress-Archive -Path GhisTrader/* -DestinationPath GhisTrader.zip -Force
-        shell: pwsh
-
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.zip_output.outputs.upload_url }}
-          asset_name: GhisTrader.zip
-          asset_path: GhisTrader.zip
-          asset_content_type: application/zip
+  
