--- a/src/GhisTrader.Domain/GhisTrader.Domain.csproj
+++ b/src/GhisTrader.Domain/GhisTrader.Domain.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
  
 
 </Project>
